--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     
+    <video class="video-background" loop muted autoplay>
+        <source src="time.mp4"></source>
+    </video>
+    <div class="video-overlay"></div>
 
 
-    
     <script src="script.js"></script>
 </body>
 </html>
